--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
       <div class="BG whiteBG">
         <div class="bodyContent">
           <!-- Screemshots showoff -->
-          <h3>Instagram on you Desktop</h3>
+          <h3>Instagram on your Desktop</h3>
           <div class="center">
             <img src="img/rammeBoth.png" />
             <img src="img/ramme.png" class="hideOnSmall" />
             <img src="img/rammeDark.png" class="hideOnSmall" />
           </div>
           <!-- Description -->
-          <p>Have you ever dreamt of having Instagam on your desktop, as an app being actively developed? Well, today is your lucky day because you found Ramme! Ramme is an unofficial open-source Instagram desktop application made with <a target="_blank" href="http://electron.atom.io/">Electron</a>.</p>
+          <p>Have you ever dreamt of having Instagram on your desktop, as an app being actively developed? Well, today is your lucky day because you found Ramme! Ramme is an unofficial open-source Instagram desktop application made with <a target="_blank" href="http://electron.atom.io/">Electron</a>.</p>
         </div>
       </div>
       <div class="BG greyBG">
