--- a/app/src/renderer/html/preload.html
+++ b/app/src/renderer/html/preload.html
@@ -11,14 +11,14 @@
 </html>
 
 <script>
-const config = require('../../main/config')
+const config = require('../../main/config');
 // Dark mode
-document.documentElement.classList.toggle('dark-mode', config.get('darkMode'))
+document.documentElement.classList.toggle('dark-mode', config.get('darkMode'));
 
 // Loading '.' iterator
 var i = 0;
 setInterval(function () {
   i = ++i % 4;
   document.getElementById('text').innerHTML = 'Loading' + Array(i + 1).join('.')
-}, 500)
+}, 500);
 </script>
